--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             <a href="/"><i class="fas fa-location-arrow"></i></a> | <a href="/checkins">view checkins</a>
         </div>
         <p class="weather">
-            I'm currently sitting at <span id="latitude"></span>&deg
+            This is happening now: I'm currently sitting at <span id="latitude"></span>&deg
             <span id="longitude"></span>&deg on this <span id='summary'></span> day and the temperature is
             a wonderful <span id="temperature"></span>F. 
             <span id="aq"><br>The concentration of particular matter 
