edit text & remove unused stylesheet

--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,16 @@
         content="width=device-width, initial-scale=1.0"
         />
         <link rel="stylesheet" type="text/css" href="styles.css" />
-        <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css/">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
         <title>Check In</title>
     </head>
     <body>
         <h1>I Am The Weather</h1>
         <div class="checkins">
-            <a href="/"><i class="fas fa-location-arrow"></i></a> | <a href="/checkins">view checkins</a>
+            <a href="/"><i class="fas fa-location-arrow"></i></a> | <a href="/places">view places i've been or will travel to</a>
         </div>
         <p class="weather">
-            This is happening now: I'm currently sitting at <span id="latitude"></span>&deg
+            This is happening now: I'm situated at <span id="latitude"></span>&deg
             <span id="longitude"></span>&deg on this <span id='summary'></span> day and the temperature is
             a wonderful <span id="temperature"></span>F. 
             <span id="aq"><br>The concentration of particular matter 
