--- a/public/places/index.html
+++ b/public/places/index.html
@@ -6,6 +6,7 @@
         name="viewport"
         content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="/styles.css" />
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
         integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
         crossorigin=""/>
@@ -19,13 +20,13 @@
                 margin: 8px 0px;
             }
         </style>
-        <title>Check In</title>
+        <title>Places I've been or will travel to</title>
 
     </head>
     <body>
-        <h1>The Weather Here</h1>
+        <h1>I Am The Weather</h1>
         <div class="checkins">
-            <a href="/index.html">check in</a> | <a href="/">view checkins</a>
+            <a href="/index.html"><i class="fas fa-location-arrow"></i></a> | <a href="/">view places</a>
         </div>
         <div id="checkInMap"></div>
         <script src="logs.js"></script>
